public/stylesheets/application.css
.home {
  .signup-block {
	h3 {
	  margin: 25px!important;
	  text-align: center!important;
	}
  }
}
p.inline-errors {
	margin-top: 0px!important;
	font-size: 13px!important;
	color: #cf210b;
}
.carousel-container {
	margin: 80px 0 80px 0;
	padding: 0px;
	text-align: center;
}
.footer-image {
	text-align: center;
}

